# qontinui-devtools

./: .coverage  .gitignore  .gitlab-ci-example.yml  .pre-commit-config-quality.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLI_HELP_OUTPUT.txt  CONTRIBUTING.md  DASHBOARD_IMPLEMENTATION.md  DEAD_CODE_DETECTOR.md  DEAD_CODE_IMPLEMENTATION.md  DEAD_CODE_QUICKSTART.md  DEPENDENCY_HEALTH_CHECKER_SUMMARY.md  DEVELOPMENT.md  GOD_CLASS_DETECTOR_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS_SUMMARY.md  LICENSE  MOCK_HAL_SUMMARY.md  PHASE4_INTEGRATION_SUMMARY.md  PHASE_1_COMPLETE.md  QUICKSTART.md  RACE_TESTER_IMPLEMENTATION.md  README.md  SRP_ANALYZER_REPORT.md  TYPESCRIPT_ANALYSIS_QUICKSTART.md  TYPE_HINT_ANALYZER_SUMMARY.md  custom_analysis_report.html  event_timeline.html  event_timeline.json  god_class_report.md  json  latency_report.txt  memory_profile_example.html  profile_results.json  pyproject.toml  qontinui_devtools_modules  race_condition_report.txt  run_security_scan.py
.github/workflows/: code-quality.yml  test.yml
docs/: TABLE_OF_CONTENTS.md  api-reference.md  architecture.md  ci-integration.md  integration.md  phase4-guide.md  qontinui-runner-manual-testing-plan.md  qontinui-runner-settings-ux-improvement-plan.md  type_hint_analyzer_quickstart.md  user-guide.md  video-capture-architecture-plan.md
docs/ci-examples/: QUICK_START.md  README.md  SETUP_INSTRUCTIONS.md  azure-pipelines.md  circleci.md  example-github-actions-output.md  example-pr-comment.md  github-actions.md  gitlab-ci.md  jenkins.md  travis-ci.md
examples/: README.md  analyze_architecture.py  analyze_circular_deps.py  analyze_coupling.py  analyze_srp.py  coupling_report.txt  custom_report.py  detect_circular_imports.py  detect_dead_code.py  detect_god_classes.py  detect_pynput_issue.py  detect_race_conditions.py  generate_report.py  performance_dashboard.py  profile_actions.py  profile_memory.py  qontinui_devtools_classes.html  qontinui_devtools_graph.json  qontinui_devtools_modules.html  srp_analysis_report.txt  test_factory_pattern.py  test_inline_workflow_validation.py  test_race_conditions.py  test_with_mock_hal.py  trace_events.py  type_analysis_demo.py  type_analysis_simple.py  use_mock_hal.py  visualize_dependencies.py
examples/regression_examples/: example_usage.py
hooks/: README.md  commit-msg
migration-docs/: DETECTION_MIGRATION_PLAN.md  ELEMENT_DETECTION_MIGRATION_SUMMARY.md  MIGRATION_COMPLETE_REPORT.md  REGION_ANALYZER_MIGRATION_COMPLETE.md
output/: import_data.json  import_graph  import_graph.dot  import_report.html
python/: .coverage
python/examples/: dependency_health_demo.py  dependency_health_example.py  documentation_example.py
python/qontinui_devtools/: __init__.py  cli.py
python/qontinui_devtools/architecture/: __init__.py  ast_metrics.py  clustering.py  coupling_analyzer.py  dependency_graph.py  god_class_detector.py  graph_visualizer.py  graphviz_gen.py  html_graph.py  layouts.py  metrics_utils.py  semantic_utils.py  srp_analyzer.py
python/qontinui_devtools/brobot_migration/: README.md  __init__.py  cli.py  cli_standalone.py  config.py  demo_workflow.py  fix_imports.py  minimal_orchestrator.py  orchestrator.py  pytest.ini  run_migration.py  run_migration_cli.py  setup_cli.py  simple_test.py  test_cli_standalone.py  test_components.py  test_config.json  test_minimal.py  test_system.py
python/qontinui_devtools/ci/: __init__.py  pr_comment.py  pre_commit_hooks.py  quality_gates.py
python/qontinui_devtools/cli/: README.md  __init__.py  (+5 more)
python/tests/: test_dead_code_detector.py
scripts/: install-ci.sh  verify_installation.py  verify_phase4.py
state-detection/: DATASET_ANNOTATION_API.md  FIXES_APPLIED.md  INSTALL_SAM3.md  SAM3.md  SAM3_CHANGES_SUMMARY.md  SETUP_STATUS.md  START_GUIDE.md  STATE_DETECTION_INTEGRATION.md  STATE_DETECTION_QUICK_START.md  TESTING_STATUS.md  TRAINING_DATA_EXPORT.md  TRAINING_DATA_SYSTEM.md  state_detection.md
(+323 files in other folders)
